# thermofit

./: README.md  pyproject.toml
scripts/: fit_all.py
thermofit/: __init__.py  thermofit.py
