[tool.poetry]
name = "thermofit"
version = "0.1.0"
description = "Python package to fit thermodynamic data"
authors = ["Dan J Bower <djbower@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
thermochem = {git = "https://github.com/ExPlanetology/thermochem.git"}
numpy = "^2.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
